# Harness-Everything

./: .gitignore  .venv  CHANGELOG_AUTO.md  CLAUDE.md  LICENSE  README.md  count_lines.py  debug_test.py  harness-agent.example.sh  main.py  pilot.py  pipeline_example_multi_repo.json  pipeline_example_self_improve.json  pipeline_example_self_improve_server.json  pyproject.toml  test_homoglyph.py
.claude/: settings.local.json
config/: agent_example.json  agent_example_project.json  agent_example_self_improve_server.json  pilot_example.json  pilot_example_project.json  pipeline_example_self_improve.json  pipeline_example_self_improve_server.json  pipeline_example_self_improve_server_v2_orchestrate.json
deploy/: cleanup_runs.sh  harness-agent.example.sh  harness.service  heartbeat.sh
docs/: HARNESS_EXPERIMENT_LOG.md  HARNESS_RUNBOOK.md  INTEL_LOOP_PHASE1.md  architecture-en.md  architecture-zh.md
harness/: __init__.py  artifacts.py  checkpoint.py  cli.py  config.py  dual_evaluator.py  evaluator.py  executor.py  game_bridge.py  hooks.py  llm.py  loop.py  memory.py  metrics.py  phase.py  phase_runner.py  pilot_cli.py  pipeline.py  planner.py  project_context.py  static_analysis.py  three_way.py
requirements/: architecture.md  index.md
scripts/: build.bat  build.sh  run.bat  run.sh  test.bat  test.sh
test_output/: summary.json
test_traceability/: test_summary.py
tests/: smoke_test_deepseek.py  test_agent_helpers.py  test_ast_rename.py  test_ast_utils.py  test_base.py  test_checkpoint.py  test_code_analysis.py  test_critical_paths.py  test_cross_reference.py  (+23 more)
(+215 files in other folders)
