[project]
name = "harness-everything"
version = "0.1.0"
description = "Configurable three-way planner-executor-evaluator harness"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
db = ["asyncpg>=0.29.0"]

[tool.setuptools.packages.find]
include = ["harness*"]

[project.scripts]
harness = "main:main"
